Cherry-pick r256474. rdar://problem/59446973

Web Inspector: inspector/cpu-profiler/threads.html is flaky crashing
    https://bugs.webkit.org/show_bug.cgi?id=207588
    <rdar://problem/57458123>

    Reviewed by Yusuke Suzuki.

    * page/cocoa/ResourceUsageThreadCocoa.mm:
    (WebCore::ResourceUsageThread::platformCollectCPUData):
    Use a fence to force Thread to be completely ready for use by other threads
    prior to storing it. Otherwise, ResourceUsageThread may see it too early.

    * workers/WorkerThread.cpp:
    (WebCore::WorkerThread::start): Ignore worker threads that are
    not fully initialized.

    Canonical link: https://commits.webkit.org/220628@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256474 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.336@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@256678 268f45cc-cd09-0410-ab3c-d52691b4dbfc